--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
              
             <div class="founder">
                 <img src="images/founder.JPG" alt="Founder" class="inline-image-center">
-                <p class="founder-title">ABTS (Actors Behind The Scenes) <br>Founder and CEO <em>Karthik S.C</em></p>
+                <p class="founder-title"><em>Karthik S.C</em>  <br>Founder and CEO  <br>ABTS (Actors Behind The Scenes) </p>
             </div>
         </div>
     
