--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
                 <a href="https://docs.google.com/forms/d/e/1FAIpQLSeXTIWTnYhl911dBc5mnfqEf0AG7ABRJQxBx5qreqv2b8T50Q/viewform?usp=sf_link" target="_blank">Application Form</a>
             </form>
             <h2>Contact Details</h2>
-            <p>Email: karthiksc1511@gmail.com</p>
+            <p>Email: abtstech2024@gmail.com</p>
             <p>Phone: +91 8497033935 </p>
             <h2>Our Location</h2>
             <p>3rd floor , above Sarvothomukha International Public school,
