--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
                     <li><a href="services.html">Services</a></li>
                     <li><a href="careers.html">Careers</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                   <!-- <li><a href="blog.html">Blog</a></li> -->
                 </ul>
             </nav>
         </div>
