--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
             </form>
             <h2>Contact Details</h2>
             <p>Email: abtstech2024@gmail.com</p>
-            <p>Phone: +91 8497033935 </p>
+            <!-- <p>Phone: +91 8497033935 </p> -->
             <h2>Our Location</h2>
             <p>3rd floor , above Sarvothomukha International Public school,
                 1st Stage, Srigandha Nagar, Sunkadakatte, Bengaluru, Karnataka 560091</p>
