--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="internships.html">Internships</a></li>
-                    <li><a href="projects.html">Projects</a></li>
+                    <!--<li><a href="projects.html">Projects</a></li>-->
                     <li><a href="services.html">Services</a></li>
                     <li><a href="careers.html">Careers</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
