--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
     </header>
     <section class="companylogo">
         <div class="container">
-            <img src="images/ABTSlogo.png" alt="companylogo">
+            <div class="neon-container">
+            <img src="images/ABTSlogo.png" alt="companylogo" class="neon-image">
+            </div>
         </div>
     </section>
 
