--- a/about.html
+++ b/about.html
@@ -68,6 +68,7 @@
 
     <footer>
         <div class="container">
+            <a href="https://www.linkedin.com/company/abts-technologies/" target="_blank"> <img class="linkedin" src="images/linkedin.png" alt="linkedin"></a>
             <p>&copy; 2024 ABTS Technologies. All rights reserved.</p>
             <p><a href="contact.html">Contact Us</a> | <a href="privacy.html">Privacy Policy</a></p>
         </div>
