--- a/blog.html
+++ b/blog.html
@@ -48,6 +48,7 @@
     <footer>
         <div class="container">
             <a href="https://www.linkedin.com/company/abts-technologies/" target="_blank"> <img class="linkedin" src="images/linkedin.png" alt="linkedin"></a>
+            <a href="https://x.com/ABTS_Tech_2024" target="_blank"><img class="linkedin" src="images/X_logo_PNG_(2).png"></a>
             <p>&copy; 2024 ABTS Technologies. All rights reserved.</p>
             <p><a href="contact.html">Contact Us</a> | <a href="privacy.html">Privacy Policy</a></p>
         </div>
