--- a/services.html
+++ b/services.html
@@ -30,7 +30,7 @@
     <section class="services">
         <div class="container">
             <h1>Services</h1>
-            <p>At ABTS Technologies, we offer a range of services to help your business succeed online.</p>
+            <p>At ABTS Technologies, we offer a range of services to help your business succeed.</p>
             <h2>Web Development</h2>
             <p>We build responsive, user-friendly websites tailored to your needs.</p>
             <h2>IOT</h2>
