--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
 
     <section class="hero">
         <div class="container" >
-            <h1>Empowering Future Developers</h1>
+            <h1>ABTS (Actors Behind The Scenes) Technologies</h1>
+            <h2>Empowering Future Developers</h2>
             <p>Your journey to becoming a top-notch developer starts here.</p>
             <a href="internships.html" class="btn">Apply for Internship</a>
             <a href="projects.html" class="btn">View Projects</a>
